--- a/autopilot-rollout/one-time/local-opsmx-profile.yaml
+++ b/autopilot-rollout/one-time/local-opsmx-profile.yaml
@@ -24,3 +24,4 @@ stringData:
   # User name that will be used for the analysis.
   # This user must have access to the data sources (prometheus/elastic, etc) used during the Rollout Analysis
   user: "admin"
+  agentName: "argocd"
