--- a/autopilot-rollout/prometheus-verifier.yaml
+++ b/autopilot-rollout/prometheus-verifier.yaml
@@ -5,7 +5,7 @@ metadata:
 data:
   prometheus-verifier: |
     accountName: opsmx-prom
-    advancedProvider: PROMETHEUS
+    monitoringProvider: PROMETHEUS
     metricTemplateSetup:
       percentDiffThreshold: hard
       groups:
