--- a/autopilot-rollout/local-provider-config.yaml
+++ b/autopilot-rollout/local-provider-config.yaml
@@ -12,12 +12,12 @@ data:
     passScore: 80
     gitops: true               # This should be removed
     serviceList:
-    - metricTemplateName: prometheus-verifier   # This is the metric template configMap name
+    - metricTemplateName: "prometheus-verifier"   # This is the metric template configMap name
       serviceName: "autopilot-demo"                        # Indicative name for the analysis, same named items are grouped together in the ISD UI 
       metricScopeVariables: "${pod_key}"   # Comma separated list of variables that will be passed to fetch the metrics
       baselineMetricScope: ".*{{env.STABLE_POD_HASH}}.*" # Comma separated list of values that will be subsituted for the variables above
       canaryMetricScope: ".*{{env.LATEST_POD_HASH}}.*"     # Same as above but for the canary (updated) version of the rollout(deployment)
-    - logTemplateName: elastic-verifier
+    - logTemplateName: "elastic-verifier"
       logScopeVariables: "kubernetes.pod_name"
       baselineLogScope: ".*{{env.STABLE_POD_HASH}}.*"
       canaryLogScope: ".*{{env.LATEST_POD_HASH}}.*"
